--- a/kmc/app/src/main/res/layout/activity_collector_menu.xml
+++ b/kmc/app/src/main/res/layout/activity_collector_menu.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:layout_margin="10dp"
+    android:layout_margin="8dp"
     tools:context=".CLogin.CollectorMenu">
     <ScrollView
         android:layout_width="match_parent"
@@ -13,18 +13,215 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="top">
+            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:cardCornerRadius="10dp"
+                android:elevation="4dp"
+                app:cardUseCompatPadding="true">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+
+                android:background="#145DA0"
+                >
+
+
+                <TextView
+                    android:id="@+id/t1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="Total No Registered:"
+                    android:textColor="#FFF"
+                    android:textSize="15dp" />
+                <TextView
+                    android:id="@+id/t2"
+                    android:layout_below="@+id/t1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text=""
+                    android:textColor="#FFF"
+                    android:textSize="25dp"
+                    android:textStyle="bold" />
+
+
+            </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:cardCornerRadius="10dp"
+                android:elevation="4dp"
+                app:cardUseCompatPadding="true">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+
+                    android:background="#FF4500
+"
+                    >
+
+
+                    <TextView
+                        android:id="@+id/t3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:text="Total No Sanctioned:"
+                        android:textColor="#FFF"
+                        android:textSize="15dp" />
+                    <TextView
+                        android:id="@+id/t4"
+                        android:layout_below="@+id/t3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:text=""
+                        android:textColor="#FFF"
+                        android:textSize="25dp"
+                        android:textStyle="bold" />
+
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:cardCornerRadius="10dp"
+                android:elevation="4dp"
+                app:cardUseCompatPadding="true">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+
+                    android:background="#8F00FF"
+                    >
+
+
+                    <TextView
+                        android:id="@+id/t5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:text="Total No Released:"
+                        android:textColor="#FFF"
+                        android:textSize="15dp" />
+                    <TextView
+                        android:id="@+id/t6"
+                        android:layout_below="@+id/t5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:text=""
+                        android:textColor="#FFF"
+                        android:textSize="25dp"
+                        android:textStyle="bold" />
+
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:cardCornerRadius="10dp"
+                android:elevation="4dp"
+                app:cardUseCompatPadding="true">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+
+                    android:background="#0198E1"
+                    >
+
+
+                    <TextView
+                        android:id="@+id/t7"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:text="Partially Grounded:"
+                        android:textColor="#FFF"
+                        android:textSize="15dp" />
+                    <TextView
+                        android:id="@+id/t8"
+                        android:layout_below="@+id/t7"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:text=""
+                        android:textColor="#FFF"
+                        android:textSize="25dp"
+                        android:textStyle="bold" />
+
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:cardCornerRadius="10dp"
+                android:elevation="4dp"
+                app:cardUseCompatPadding="true">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+
+                    android:background="#006400"
+                    >
+
+
+                    <TextView
+                        android:id="@+id/t9"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:text="Total No Fully Grounded:"
+                        android:textColor="#FFF"
+                        android:textSize="15dp" />
+                    <TextView
+                        android:id="@+id/t10"
+                        android:layout_below="@+id/t9"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:text=""
+                        android:textColor="#FFF"
+                        android:textSize="25dp"
+                        android:textStyle="bold" />
+
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
             <TextView
-                android:layout_marginTop="50dp"
+                android:paddingLeft="16dp"
+                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Select Mandal"/>
         <LinearLayout
+
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_weight="8"
             android:orientation="horizontal"
             android:background="@drawable/border"
             tools:ignore="UselessParent">
+
 
     <Spinner
         android:layout_gravity="center"
@@ -34,11 +231,15 @@
         android:layout_height="wrap_content"/>
         </LinearLayout>
             <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:layout_marginTop="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Select Village"/>
         <LinearLayout
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_weight="8"
