Sector Officer Bugs

--- a/kmc/app/src/main/res/layout/activity_collector_menu.xml
+++ b/kmc/app/src/main/res/layout/activity_collector_menu.xml
@@ -205,6 +205,18 @@
 
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
+            <Button
+                android:id="@+id/pendencyReport"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Pendency Report"
+                android:onClick="pendency"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                style="?attr/materialButtonOutlinedStyle"
+                />
             <TextView
                 android:paddingLeft="16dp"
                 android:layout_marginTop="20dp"
@@ -233,6 +245,14 @@
             <TextView
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
+                android:id="@+id/ctrMandalPending"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Collector Pending:"
+                android:textColor="@color/colorPrimary"/>
+            <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:layout_marginTop="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -255,6 +275,14 @@
                     android:visibility="gone"
                     android:layout_height="wrap_content" />
             </LinearLayout>
+            <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:id="@+id/ctrVillagePending"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Collector Pending:"
+                android:textColor="@color/colorPrimary"/>
             <Button
                 android:id="@+id/approve"
                 android:layout_marginLeft="16dp"
