--- a/kmc/app/src/main/res/layout/activity_collector_menu.xml
+++ b/kmc/app/src/main/res/layout/activity_collector_menu.xml
@@ -205,18 +205,18 @@
 
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
-            <Button
-                android:id="@+id/pendencyReport"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Pendency Report"
-                android:onClick="pendency"
-                android:layout_marginTop="30dp"
-                android:gravity="center"
-                style="?attr/materialButtonOutlinedStyle"
-                />
+<!--            <Button-->
+<!--                android:id="@+id/pendencyReport"-->
+<!--                android:layout_marginLeft="16dp"-->
+<!--                android:layout_marginRight="16dp"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Pendency Report"-->
+<!--                android:onClick="pendency"-->
+<!--                android:layout_marginTop="30dp"-->
+<!--                android:gravity="center"-->
+<!--                style="?attr/materialButtonOutlinedStyle"-->
+<!--                />-->
             <TextView
                 android:paddingLeft="16dp"
                 android:layout_marginTop="20dp"
@@ -253,6 +253,30 @@
             <TextView
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
+                android:id="@+id/spMandalPending"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="SP Pending:"
+                android:textColor="@color/colorPrimary"/>
+            <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:id="@+id/psMandalPending"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="PS Pending:"
+                android:textColor="@color/colorPrimary"/>
+            <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:id="@+id/groundingMandalPending"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Grounding Pending:"
+                android:textColor="@color/colorPrimary"/>
+            <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:layout_marginTop="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -282,6 +306,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Collector Pending:"
+                android:textColor="@color/colorPrimary"/>
+            <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:id="@+id/spVillagePending"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="SP Pending:"
+                android:textColor="@color/colorPrimary"/>
+            <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:id="@+id/psVillagePending"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="PS Pending:"
+                android:textColor="@color/colorPrimary"/>
+            <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:id="@+id/groundingVillagePending"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Grounding Pending:"
                 android:textColor="@color/colorPrimary"/>
             <Button
                 android:id="@+id/approve"
