--- a/kmc/app/src/main/res/layout/activity_reports.xml
+++ b/kmc/app/src/main/res/layout/activity_reports.xml
@@ -15,6 +15,7 @@
         android:weightSum="1"
         tools:ignore="MissingConstraints">
 
+
         <TextView
             android:id="@+id/title"
             android:layout_width="0dp"
@@ -27,6 +28,7 @@
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_below="@+id/layout1"
         android:layout_width="match_parent"
@@ -34,6 +36,12 @@
         android:weightSum="1"
         tools:ignore="MissingConstraints"
         android:orientation="vertical">
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:indeterminate="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"/>
 
         <Button
             android:id="@+id/spReport"
