--- a/kmc/app/src/main/res/layout/singlerow_overview.xml
+++ b/kmc/app/src/main/res/layout/singlerow_overview.xml
@@ -34,6 +34,7 @@
             android:textColor="#000"
             android:textSize="15dp"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/t3"
             android:layout_width="match_parent"
@@ -41,10 +42,9 @@
             android:layout_below="@id/t2"
             android:layout_centerHorizontal="true"
             android:text="Total Selected:"
-            android:textColor="#FFA500"
+            android:textColor="#000"
             android:textSize="15dp"
             android:textStyle="bold" />
-
         <TextView
             android:id="@+id/t4"
             android:layout_width="match_parent"
@@ -52,7 +52,7 @@
             android:layout_below="@id/t3"
             android:layout_centerHorizontal="true"
             android:gravity="left"
-            android:text="Total Approved Amount:"
+            android:text="Total DB Amount:"
             android:textColor="#000"
             android:textSize="15dp"
             android:textStyle="bold" />
@@ -63,8 +63,8 @@
             android:layout_below="@id/t4"
             android:layout_centerHorizontal="true"
             android:gravity="left"
-            android:text="DB Account Amount:"
-            android:textColor="#FFA500"
+            android:text="Total Approved Amount:"
+            android:textColor="#000"
             android:textSize="15dp"
             android:textStyle="bold" />
         <TextView
@@ -72,6 +72,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/t5"
+            android:layout_centerHorizontal="true"
+            android:gravity="left"
+            android:text="DB Account Balance:"
+            android:textColor="#000"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/t7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/t6"
             android:layout_centerHorizontal="true"
             android:text="Total Grounded:"
             android:textColor="#000"
