--- a/kmc/app/src/main/res/layout/activity_collector_user_details.xml
+++ b/kmc/app/src/main/res/layout/activity_collector_user_details.xml
@@ -16,22 +16,43 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="top">
-
+            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:cardCornerRadius="8dp"
+                android:elevation="50dp"
+                android:dividerHeight="0.0px"
+                android:clipToPadding="false"
+                android:clipChildren="false"
+                app:cardUseCompatPadding="true">
 
             <TextView
                 android:id="@+id/IndividualName"
                 android:textSize="20sp"
+                android:padding="7dp"
                 android:textColor="#000000"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
-
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                app:cardCornerRadius="8dp"
+                android:elevation="50dp"
+                android:dividerHeight="0.0px"
+                android:clipToPadding="false"
+                android:clipChildren="false"
+                app:cardUseCompatPadding="true">
             <TextView
                 android:id="@+id/FatherName"
                 android:textSize="20sp"
+                android:padding="7dp"
                 android:textColor="#000000"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"/>
-
+            </androidx.cardview.widget.CardView>
             <TextView
                 android:id="@+id/Age"
                 android:textSize="20sp"
